--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
+    "@nivo/bar": "^0.58.0",
+    "@nivo/calendar": "^0.58.0",
+    "@nivo/line": "^0.58.0",
+    "@nivo/pie": "^0.58.0",
+    "babel-loader": "^8.0.6",
     "bulma": "^0.7.0",
     "fetch": "^1.1.0",
     "gatsby": "^2.1.34",
@@ -21,6 +26,7 @@
     "gatsby-source-filesystem": "^2.0.26",
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.9",
+    "imap": "^0.8.19",
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cms-app": "^2.9.1",
@@ -33,6 +39,7 @@
     "react-dom": "^16.8.4",
     "react-google-charts": "^3.0.13",
     "react-helmet": "^5.2.0",
+    "util": "^0.12.0",
     "uuid": "^3.2.1"
   },
   "keywords": [
@@ -54,6 +61,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-transform-object-assign": "^7.2.0",
     "http-proxy-middleware": "^0.19.1",
     "netlify-lambda": "^1.4.3",
     "npm-run-all": "^4.1.5",
