--- a/package.json
+++ b/package.json
@@ -9,36 +9,39 @@
     "@nivo/line": "^0.58.0",
     "@nivo/pie": "^0.58.0",
     "babel-loader": "^8.0.6",
-    "bulma": "^0.7.0",
+    "bulma": "^0.7.5",
     "fetch": "^1.1.0",
-    "gatsby": "^2.1.34",
-    "gatsby-image": "^2.0.23",
-    "gatsby-plugin-netlify": "^2.0.6",
+    "gatsby": "^2.13.67",
+    "gatsby-image": "^2.2.8",
+    "gatsby-plugin-netlify": "^2.1.5",
     "gatsby-plugin-netlify-cms": "^4.0.0",
-    "gatsby-plugin-purgecss": "^3.1.0",
-    "gatsby-plugin-react-helmet": "^3.0.4",
-    "gatsby-plugin-sass": "^2.0.7",
-    "gatsby-plugin-sharp": "^2.0.15",
+    "gatsby-plugin-purgecss": "^3.1.1",
+    "gatsby-plugin-react-helmet": "^3.1.3",
+    "gatsby-plugin-sass": "^2.1.8",
+    "gatsby-plugin-sharp": "^2.2.12",
     "gatsby-remark-component": "^1.1.3",
-    "gatsby-remark-copy-linked-files": "^2.0.7",
-    "gatsby-remark-images": "^3.0.1",
-    "gatsby-remark-relative-images": "^0.2.1",
-    "gatsby-source-filesystem": "^2.0.26",
+    "gatsby-remark-copy-linked-files": "^2.1.6",
+    "gatsby-remark-images": "^3.1.12",
+    "gatsby-remark-relative-images": "^0.2.3",
+    "gatsby-source-filesystem": "^2.1.9",
+    "gatsby-source-graphql": "^2.1.29",
     "gatsby-transformer-remark": "^2.3.12",
-    "gatsby-transformer-sharp": "^2.1.9",
-    "imap": "^0.8.19",
-    "lodash": "^4.17.5",
+    "gatsby-transformer-sharp": "^2.2.6",
+    "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
-    "netlify-cms-app": "^2.9.1",
-    "netlify-cms-media-library-cloudinary": "^1.3.2",
-    "netlify-cms-media-library-uploadcare": "^0.5.2",
-    "node-sass": "^4.11.0",
-    "parcel-bundler": "^1.9.4",
+    "moment-with-locales-es6": "^1.0.1",
+    "netlify-cms-app": "^2.9.7",
+    "netlify-cms-lib-util": "^2.3.3",
+    "netlify-cms-media-library-cloudinary": "^1.3.3",
+    "netlify-cms-media-library-uploadcare": "^0.5.3",
+    "node-sass": "^4.12.0",
+    "parcel-bundler": "^1.12.3",
     "prop-types": "^15.6.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-helmet": "^5.2.0",
-    "util": "^0.12.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-gauge-chart": "^0.2.1",
+    "react-helmet": "^5.2.1",
+    "recharts": "^1.8.5",
     "uuid": "^3.2.1"
   },
   "keywords": [
@@ -63,9 +66,9 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-transform-object-assign": "^7.2.0",
     "http-proxy-middleware": "^0.19.1",
-    "netlify-lambda": "^1.4.3",
+    "netlify-lambda": "^1.6.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.15.3",
-    "rimraf": "^2.6.2"
+    "prettier": "^1.18.2",
+    "rimraf": "^2.7.1"
   }
 }
