--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
-  "version": "1.1.3",
-  "author": "Austin Green",
+  "name": "condor-web",
+  "description": "Hotel Charlottenberg Dashboard",
+  "version": "1.0",
+  "author": "Johan Larsson",
   "dependencies": {
     "@nivo/bar": "^0.58.0",
     "@nivo/calendar": "^0.58.0",
