--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "condor-web",
   "description": "Hotel Charlottenberg Dashboard",
-  "version": "1.0",
+  "version": "1.0.0",
   "author": "Johan Larsson",
   "dependencies": {
     "@nivo/bar": "^0.58.0",
@@ -42,6 +42,7 @@
     "react-gauge-chart": "^0.2.1",
     "react-helmet": "^5.2.1",
     "recharts": "^1.8.5",
+    "regression": "^2.0.1",
     "uuid": "^3.2.1"
   },
   "keywords": [
